--- a/less/layout.less
+++ b/less/layout.less
@@ -35,8 +35,7 @@
   justify-content: space-between;
   
   * {
-    flex-grow: 1;
-    flex-basis: 0;
+    flex: 1 0 auto;
     margin: 10px;
   }
 }
